--- a/README.textile
+++ b/README.textile
@@ -1,7 +1,27 @@
-h2. Сервисы ТДИС
+h1. Сервисы ТДИС
+
+h2. О проекте
 
 Целью данного проета является содействие в изучении "ТДИС":http://newasp.omskreg.ru/tdis/.
 
 В настоящий момент продукт реализует следующие сервисы:
 * поиск и расшифровка аббревиатур
 * текстовый фильтр реализующий замену аббревиатур в тексте на интерактивные элементы, позволяющие узнавать расшифровки при наведении курсора мыши
+
+h2. Запуск
+
+Для запуска проекта требуется Simple Build Tool версии 0.10, также известный как xsbt. Инструкции по установке можно найти "здесь":https://github.com/harrah/xsbt/wiki/Setup.
+
+После установки выполните следующие действия:
+* склонируйте репозиторий, используя git и URL вверху страницы
+* запустите sbt в папке с проектом
+* выполните команду jetty-run
+
+После этого в своем любимом браузере наберите http://localhost:8080 и готово.
+
+h2. Участие
+
+Если у вас есть желание принять участие в разработке проекта - существует несколько способов, чтобы это реализовать.
+
+* создать отчет об ошибке или запрос на добавление функций использую раздел issues вверху страницы или по e-mail: alun=at=katlex.com
+* реализовать issue и предложить pull запрос, из своей копии репозитория
